--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,10 @@ img {
     max-width: 100%;
 }
 
+strong {
+    font-weight: var(--fw-bold);
+}
+
 /* All Header*/
 
 h1,h2,h3{
@@ -69,9 +73,29 @@ h3{
 }
 
 
+.section__title {
+    margin-bottom: .25rem;
+}
 
+.section__title--intro {
+    font-weight: var(--fw-reg);
+}
 
+.section__title--intro strong {
+    display: block;
+    
+}
 
+.section__subtitle {
+    margin: 0;
+    font-size: var(--fs-h3);
+}
+
+.section__subtitle--intro,
+.section__subtitle--about{
+    background: var(--clr-accent);
+    font-family: var(--ff-secondary);
+}
 
 
 
