--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,7 @@ header {
     .services {
         display: flex;
         max-width: 1000px;
-        margin-left: auto;
+        margin-left:auto;
         margin-right: auto;
     }
 
@@ -329,7 +329,7 @@ header {
 
 .about-me {
     max-width: 1000px;
-    margin: 0 auto;
+    margin: auto;
 }
 
 .about-me__img {
