--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,7 @@ header {
 
 .my-services {
     background-color: var(--clr-dark);
-    background-image: url(../images/services-bg.jpg);
+    background-image: url(../images/services-bg2.jpg);
     background-size: cover;
     color: var(--clr-light);
     text-align: center;
@@ -331,6 +331,8 @@ header {
 .about-me {
     max-width: 1000px;
     margin: auto;
+    
+    
 }
 
 .about-me__img {
